--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,11 +8,12 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Research Portfolio"
-    url: /portfolio/
         
-  - title: "Publications"
+  - title: "Research"
     url: /publications/
+
+  - title: "Portfolio"
+    url: /portfolio/
 
   - title: "Teaching"
     url: /teaching/    
