--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ name                     : &name "Songhang Li"
 description              : &description "B.S. in Electric Engineering"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://Edler-Li.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "/songhangli" # the subpath of your site, e.g. "/blog"
-repository               : "https://Edler-Li/songhangli.github.io"
+baseurl                  : # the subpath of your site, e.g. "/blog"
+repository               : "https://Edler-Li.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
