--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default" # The available themes options are "default
 title                    : "Homepage"
 title_separator          : "-"
 name                     : &name "Songhang Li"
-description              : &description "B.S. in Electric Engineering"   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : &description "B.S. in Electrical Engineering"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://Edler-Li.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -26,7 +26,7 @@ author:
   avatar           : "profile1.png"
   name             : "Songhang Li"
   pronouns         : # example: "she/her"  
-  bio              : "B.S. in Electric Engineering"
+  bio              : "B.S. in Electrical Engineering"
   location         : "New York, United States"
   employer         : "Columbia University"
   uri              : # URL
@@ -35,10 +35,10 @@ author:
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?view_op=list_works&hl=en&user=6OADyr4AAAAJ"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "https://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0002-3215-6080"
   semantic         : # URL
   ssrn             : # URL
   pubmed           : # URL
